fixed spacing and added buttons

--- a/app/lending/lending.module.scss
+++ b/app/lending/lending.module.scss
@@ -23,7 +23,6 @@
 
 .title {
   font-size: 32px !important;
-  padding-left: 2rem;
   text-align: left;
   width: 100%;
   max-width: 1500px;
@@ -31,8 +30,7 @@
 
 .grid {
   display: flex;
-  gap: 2rem;
-  padding: 2rem;
+  gap: 3rem;
   padding-top: 0rem;
   max-width: 1500px;
 }
